removing methods and updating trecEval